matroskademux: fix memory leak in check_subtitle_buffer

https://bugzilla.gnome.org/show_bug.cgi?id=704921